Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -1,94 +1,47 @@
-# Introduction to Ethiopian national Labor Force Survey (LFS)
+# Introduction to Sierra Leone national Labor Force Survey (LFS)
 
-- [What is the ETH LFS](#what-is-the-eth-lfs)
-- [What does the ETH LFS cover?](#what-does-the-eth-lfs-cover)
+- [What is the SLE LFS](#what-is-the-sle-lfs)
+- [What does the SLE LFS cover?](#what-does-the-sle-lfs-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
 - [What is the geographic significance level?](#what-is-the-geographic-significance-level)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
-## What is the ETH LFS?
-
-The Ethiopian Labor Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was firstly undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of all regions (except Gambella region, Affar Region, and Somali) in Ethiopia to fill the vancancy of national statistics.
+## What is the SLE LFS?
 
 
-## What does the ETH LFS cover?
+## What does the SLE LFS cover?
 
-The ETH LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. In addition, the ETH LFS also includes information on migration. Year 2021 has richer content on disabilities section. Years used for harmonization range from 1999 to 2021 discontinuously, 4 years in total.
-
-Years and sample size of LFS harmonized for GLD are:
-
-| **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| **Officially Reported Population (# Individuals)** |
-| :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
-| [1999](utilities/ETH_1999_LFS_report.pdf)  | 81,339        | 366,274      |  54,430,917  |   81,473   | 54,453,238|
-| [2005](utilities/Labour_force_survey_Final_Report_2005.pdf)  | 54,443        | 230,680      |  63,228,599  |   54,484   | 63,228,600|
-| [2013](utilities/nlfs_analytical_report_labor_force_2013.pdf)  | 58,321        | 240,660      |  80,444,148  |   58,396   | 80,444,148|
-| [2021](utilities/FINAL_STATISTICAL_REPORT_ON_THE_2021_LMS.docx)  | 43,329        | 174,613      |  98,035,894 |    49,916   | 98,038,146|
-
-All the four years' official annual reports are provided in the table above through the links attached to each year. The officially reported HH sample size all came from their annual reports. 
-
-Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We commonly created HH identifiers using seven original variables: region, zone, wereda, town, kefetegna, Kebele, and enumeration area serial number according to their processing methodology. Even though the HH sample sizes do not match the reported size, the expanded population are quite close to their official estimates. It might be the case that the CSA has adjusted the weights in the raw datasets so as to match the population estimates.      
-
+| **District Name**	| **In the Report?**	| **# EA in the Report**	| **In the Data?**	| **# EA in the Data**	|**Note**|
+| :---------------:	| :---------------:		| :------------------:	 	| :--------------:	| :------------------:	|:----:| 
+| Kailahun District | YES | 14 |    |   81,473   | 54,453,238|
+|  Kenema City      | YES | 14 |  63,228,599  |   54,484   | 63,228,600|
+| Kenema District   | YES | 14 | 240,660      |  80,444,148  |   58,396   | 80,444,148|
+| Koidu/New Sembehun City | YES | 14 |  98,035,894 |    49,916   | 98,038,146|
+| Kono District     | YES | 14 |  98,035,894 |    49,916   | 98,038,146|
+| Makeni City       | YES | 10 |  98,035,894 |    49,916   | 98,038,146|
+| Bombali District  | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
+| Kambia District   | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
+| Koinadugu District| YES | 12 |  98,035,894 |    49,916   | 98,038,146|
+| Port Loko District| YES | 12 |  98,035,894 |    49,916   | 98,038,146|
+| Tonkolili District| YES | 12 |  98,035,894 |    49,916   | 98,038,146|
+| Bo City           | YES | 14 |  98,035,894 |    49,916   | 98,038,146|
+| Bo District       | YES | 14 |  98,035,894 |    49,916   | 98,038,146|
+|Bonthe Municipality| YES | 6  |  98,035,894 |    49,916   | 98,038,146|
+| Bonthe District   | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
+| Moyamba District  | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
+| Pujehun District  | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
+| Freetown City     | YES | 50 |  98,035,894 |    49,916   | 98,038,146|
+|Western Rural District| YES | 20 |  98,035,894 |    49,916   | 98,038,146|
+| Western Area      | YES | 70|  98,035,894 |    49,916   | 98,038,146|
 
 ## Where can the data be found?
-
-The microdata of ETH LFS are unfortunately not publicly available. All data are World Bank internal use only. 
 
 
 ## What is the sampling procedure?
 
-The sampling procedure is a mixture of two-stage cluster and three-stage cluster sample design. Firstly, the whole country is divided into three broad categories: *rural*, *major urban centers*, and *other urban centers*. For category 1-rural and category 2-major urban areas, a stratified two-stage cluster sample design was used, which selects primary sampling units (PSU: enumeration areas) and secondary sampling units (SSU: households). But for other urban centers, a stratified three-stage cluster sample design was adopted. The PSUs are urban centers follwed by enumeration areas (EA) as SSUs and last but not least, households. For all four years. ETH LFS are representative at urban/rural parts of region level. 
-
-More details of the sampling frame & procedure are included in each year's annual report. Here is an example of [LFS 2013](utilities/nlfs_analytical_report labor_force_2013.pdf) (page 19/20 of the PDF):
-
-```
-For the purpose of the survey the country was divided into three broad categories. That is; rural, major urban center and other urban center categories.
-
-Category I: Rural: - This category consists of the rural areas of nine regions and one rural part of city administration found in the country. Regarding the survey domains, each region or city administration was considered to be a domain (Reporting Level) for which major findings of the survey are reported. This category totally comprises 10 reporting levels. A stratified two-stage cluster sample design was used to select samples in which the primary sampling units (PSU) were EAs. Households per sample EA were selected as a Second Stage Sampling Unit (SSU) and the survey questionnaire finally administered to all members of sample households.
-
-Category II:- Major urban centers:- In this category all regional capitals and 15 other major urban centers that had a population size of 100,000 or more in 2007 were included. Each urban center in this category was considered as a reporting level.This category has totally 26 reporting levels. In this category too, in order to select the samples, a stratified two-stage cluster sample design was implemented. The primary sampling units were EAs. Households from each sample EA were then selected as a Second Stage Unit.
-
-Category III: - Other urban centers: Urban centers in the country other than those under category II were grouped into this category. Harari, Addis Ababa and Dire Dawa do not have urban centers other than that grouped in category II. Hence, no domain was formed for these regions under this category. Unlike the above two categories a stratified three stage cluster sample design was adopted to select samples from this category. The primary sampling units were urban centers, the second stage sampling units were EAs and Households from each EA were finely selected at the third stage and the survey questionnaires administered for all of them.
-
-```    
-
 
 ## What is the geographic significance level?
 
-The official reports detailed results by gender, sector (i.e. urban or rural), and regions in Ethiopia. For all four years, they are representative at the urban/rural division of each region level. Therefore, we coded `subnatidsurvey` as a combination of region and urban/rural status, i.e. Affar-rural vs. Affar-urban. 
-
 
 ## Other noteworthy aspects  
-
-### Coding of industry and occupation codes
-
-In general, so far we do not have information on the version of Ethiopia's National Occupation and Industry Classifications (NOIC). The full codebooks of NOIC and its history of change are unkown to us. The only version we know for sure is NOIC 1994 which is used for LFS 1999. The codebook of NOIC 1994 can be found [here.](utilities/isic_isco/ETH_national_mappings_1999.xlsx) 
-
-Even though the version information of NOIC is missing, we still managed to map the original industry and occupation variables in the raw datasets according to annual reports. The NOIC of LFS 2005 is based on ISIC Rev.3 and its ISCO counterpart is ISCO 88; the ISIC and ISCO used for year 2013 and 2021 are ISIC Rev.4 and ISCO08 respectively. We followed the guide in ETH LFS annual reports and completed the mapping this way but we are still waiting for more detials of the NOIC version and labeling of each NOIC subcategories to double check the mapping. 
-
-- For year **1999**, we did not harmonize `indsutrycat_isic` since the original unlabled industry variable have too many unmatched categories with ISIC Rev.3. We harmonized `occup_isco` at two-digit level.
-- For year **2005**, we mapped `industrycat_isic` at three-digit level and `occup_isco` at two-digit level.
-- For year **2013**, we mapped `industrycat_isic` at four-digit level with only few changes and `occup_isco` at two-digit level.
-- For year **2021**, we mapped `industrycat_isic` at four-digit level and `occup_isco` at three-digit level.
-
-Some categories in NOIC could not be found in ISIC or ISCO due to adaptations to make NOIC reflect local economic characteristics. So we made some changes to the codes and more details about the correspondence are in this [separate document](Correspondence_National_International_Classifications.md).
-
-
-### Mapping years of education
-
-Mapping educational achievement is tricky for Ethiopia, due to the convoluted categorization of the original education variables, especially in 2013 and 2021. In the last two years, the categories are mixed with old and new curriculums. With great help from our colleagues in Poverty & Equity group and Ethiopian Statistics Service (ESS), we were able to correctly complete the educational achievement harmonization for all years and the correspondence is covered in this [separate document](Educational_Achievement_Harmonization.md).   
- 
-
-### Helper files for region, zone and wereda naming
-
-We created a codelist for `subnatid2` and `subnatid3` according to CSA's codebooks of EA for 2021. This is file needs to be used along with the harmonization codes of 2021 to complete the harmonization process. Commonly one zone represents one zone, meaning has one zone name. But kindly be noted that there are two zone codes with two different zone names each:
-1)  0401 - Oromia-Mirab Wollega 
-    0401 - Oromia-Misrak Wollega 
-2)  0601 - Benishangul-Gumuz-Assosa     
-    0601 - Benishangul-Gumuz-Metekel
-    
-These cases exist in the original document shared with us by CSA so we could not figure out the reason of having different zone names by one same zone code.      
-    
-| **Document**	| **Description**	| **Referrence**|
-| :---------:	| :-------------: | :-----------: |   
-| [ETH_subnatid_2021](utilities/Additional%20Data/ETH_2021_subnatid_codebook.dta)  | A comprehensive code list containing the codes and names of region, zone, wereda, town, kebele, and enumeration area in Ethiopia. It was used for harmonizing the GLD variable `subnatid2` and `subnatid3` for 2021.|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|    
