--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -12,9 +12,8 @@ The Zimbabwe National Statistics Agency (ZIMSTAT) started conducting Quarterly L
 
 ## What does the ZWE QLFS survey cover?
 
-The Q3 2021 QLFS is the first of its kind. It follows the 2013 labour force framework adopted at the 19th International Conference of Labour Statisticians (ICLS) that provided new guidelines for measuring and compiling statistics on work, employment, and labour underutilization.
+The Q3 2021 QLFS is the first of its kind. It follows the 2013 labour force framework adopted at the 19th International Conference of Labour Statisticians (ICLS) that provided new guidelines for measuring and compiling statistics on work, employment, and labour underutilization. The survey is nationally representative and has the following sample size:
 
-The ZWE LFS is nationally representative. The sampling frame used for the LFCLS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. Except for Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small-Scale Commercial Farming Areas (SSCFA) and Resettlement Areas. Only one urban stratum was formed each in Harare and Bulawayo, giving 34 strata in total.
 
 | Year   | # of Households        | # of Individuals|
 | :------- | :--------                             | :--------             |
@@ -29,15 +28,20 @@ The ZWE LFS is nationally representative. The sampling frame used for the LFCLS 
 The microdata from the Quarterly LFS is available through the Zimbabwe Statistics [Website](https://www.zimstat.co.zw/labour-force-publications/). A quarterly report is available.
 
 ## What is the sampling procedure?
-The sampling procedure is a two-stage sample design. The 1st stage was the selection of enumeration areas using the probability proportional to size criteria. The 2nd stage was the selection of households in the selected enumeration areas using a random systematic sampling technique. 500 enumeration areas in total and 12,500 households were selected for the survey. 
+The sampling frame used for the LFCLS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. Except for Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small-Scale Commercial Farming Areas (SSCFA) and Resettlement Areas. Only one urban stratum was formed each in Harare and Bulawayo, giving 34 strata in total. The sampling procedure is a two-stage sample design. The first stage was the selection of enumeration areas using the probability proportional to size criteria. The second stage was the selection of households in the selected enumeration areas using a random systematic sampling technique. 500 enumeration areas in total and 12,500 households were selected for the survey.
 
 ## What is the geographic significance level?
-The survey is significant at the province level for each quarter. At times it is disaggregated by gender but there is no information at the urban/rural level by province. A word of caution for the user of the final harmonized datasets is that the datasets are aggregated by year to keep consistency; however, since the NSO is yet to release the year datasets, it is not possible to confidently confirm that the yearly significance level is significant beyond the province level. 
+
+The survey is significant at the province level for each quarter and information is reported by male and female per province. It is not established in the report whether the disaggregation by province **and** sex is representative but it probably is. Disaggregation by province **and** area (urban or rural) is not shown in the reports. the GLD team assume this is because, while gender can be assumed to be evenly distributed in the province, urban and rural areas are not, requiring a larger sample size to ensure representativeness for the smaller category (i.e., urban areas in predominantly rural provinces, rural areas in urban provinces).
+
+There are no reports on the annually appended data but it should be possible to disaggregate this data by province **and** area. However, not that the survey started in Q3 of 2021 so the 2021 dataset has a sample size about half as large as 2022.
 
 ## Other Noteworthy Aspects
 
 ### Misalignment of the questionnaire and raw data responses
-- In 2021 Q3 and Q4, response labels for questions 7, 8, 9 and 10 in the main job section differ from questionnaire labels. The images below show the differences between the questionnaire and the raw data labels.
+
+In quarters 3 and 4 of 2021, response labels for questions 7, 8, 9 and 10 in the main job section in the raw data downloaded from the NSO website differ from questionnaire labels. The images below show the differences between the questionnaire (first image) and the raw data labels (second image).
+
 <br></br>
 ![questionnaire](utilities/image1.PNG)
 <br></br>
@@ -46,9 +50,9 @@ The survey is significant at the province level for each quarter. At times it is
 ![rawdata](utilities/image2.png)
 <br></br>
 
-### Employment Status
-- In 2021 Q3 and Q4, the values of employment status differ between quarters for the category of "contributing family workers". 
-- The images below show that the numbers of the category contributing family workers for 2011 and 2014 are significantly different. The user should consider this while analysing the data.
+### Employment Status - Jumps in `empstat`
+
+In quarters 3 and 4 of 2021, the results for `empstat` values differs markedly between quarters, especially for the category of "contributing family workers". The images below show the this is also what the statistics office has reported and thus in the raw data.
 
 <br></br>
 ![Quarter_3](utilities/q3_empstat.PNG)
@@ -58,23 +62,37 @@ The survey is significant at the province level for each quarter. At times it is
 ![Quarter_4](utilities/Q4_empstat.PNG)
 <br></br>
 
+The variable is stable for the year 2022. Estimates generated for 2021 should take this into account.
+
 ### No Household IDs
-- Household IDs (HHID) cannot be created for any quarter because the raw data does not contain identificators. The data is only identifiable randomly at the household level.
+
+Household IDs (variable `hhid`) cannot be created for any quarter because the raw data does not contain household identifiers. Thus no secondary sampling units can be identified.
 
 ### Management of Quarterly Data
-The Quarterly data, as described above, were grouped by year to facilitate the analysis of the user. However, the user should note that though the aggregated data is representative at the province level, the sample size is bigger after appending. Also, the user should note that the lack of household ID prevented us from merging by ID, as such, all the observations in the appended file are independent and not identifiable beyond the random ID assigned at the harmonization stage.
+The quarterly data, as described above, were grouped by year to facilitate the analysis of the user. However, the user should note that though the aggregated data is representative at the province level, the sample size is bigger after appending. Also, the user should note that the lack of household ID prevented us from merging by ID, as such, all the observations in the appended file are independent and not identifiable beyond the random ID assigned at the harmonization stage.
 
 ### Change in ICLS definition
 
-See the following [page](https://github.com/worldbank/gld/blob/e5f4e8da632a43c36175edda905db54a66cd075f/Support/B%20-%20Country%20Survey%20Details/ZWE/LFS/ICLS_change.md) for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
+See the following [page](../LFS/ICLS_change.md) for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
 
 ### Highest level of education
 
-Please see this [page](https://github.com/worldbank/gld/blob/b1515b74f68d2f0cb11550682d453027ee31070c/Support/B%20-%20Country%20Survey%20Details/ZWE/LFS/Education.md) for a complete explanation on the education levels in ZWE.
+Please see this [page](../LFS/Education.md) for a complete explanation on the education levels in ZWE.
 
 ### Migration reference period
 
-The time interval between the 2011 , 2014 and the 2019 LFS surveys was 5 years. The reference period for migration information was labeled as a 5 year interval for each survey respectively. Starting 2021, the LFS survey happened quarterly, the result is that the time interval between surveys is now reduced to 1 quarter of a year. The GLD team coded the migration reference period variable accordingly . In Q3 2021, the data  was collected after 2 years as such the corresponding migration reference period is 2 years, for Q4 of 2021 , however, the reference period is the previous quarter. In the year 2022, all the information on migration follows the precedent quarter as such it has been labeled as 0.25 (1 quarter of a year). 
+The time interval between the 2011, 2014 and the 2019 LFS surveys was 5 years. The migration information covered always asked about any migration since the last survey. The reference period for migration information was thus always 5 years.
 
+In the QLFS the reference period is to be the time since the last QLFS (see screenshot from the interviewer manual below).
 
+<br></br>
+![Screenshot from interviewer manual](utilities/zwe_m3_how.png)
+<br></br>
 
+However, in the first iteration of the QLFS (Q3 of 2021) the reference period is since the last LFS (in June 2019). That means that there are three reference periods to be taken into account, that the information on migration covers migration occurring within 5 years (2019 and before), within 2 years (Q3 of 2021), and within the previous 3 months (since Q4 of 2021).
+
+As an example, the image below shows the raw number of people who said to have migrated in Q3 and Q4 of 2021. There are five times as many in Q3 than in Q4. This is not the result of migration variability but rather of changing reference periods. Variable `migrated_ref_time` informs the user of the time period migration variables are referring to in years.
+
+<br></br>
+![Quarter_4](utilities/migrated_binary_2021.png)
+<br></br>
