--- a/Support/B - Country Survey Details/ZWE/LFS/1. Introduction to ZWE LFS.md
+++ b/Support/B - Country Survey Details/ZWE/LFS/1. Introduction to ZWE LFS.md
@@ -8,11 +8,11 @@
 
 ## What is the ZWE LFS survey?
 
-The official name of the labour force survey of Zimbabwe is Labour Force and Child Labour Survey (LFCLS). For simplicity, the LFCLS will be called Labour Force Survey (LFS) in the rest of the text. The ZWE LFS provides socioeconomic indicators useful in monitoring living conditions and details in-depth information about the labour force in Zimbabwe. The survey focuses on social and economic characteristics status in employment, industry, occupation, place of work and social security. The survey periodicity is five years. The primary objectives are to provide information on the number of people classified according to their activity status, the size, and characteristics of the economically active population, that is, the employed and the unemployed, the informal sector employment and informal employment, retrenchments, the number of working children, the detrimental effects of work on children, and the living conditions in general. 
+The official name of the labour force survey of Zimbabwe is Labour Force and Child Labour Survey (LFCLS). For simplicity, the LFCLS will be called Labour Force Survey (LFS) in the rest of the text. The ZWE LFS provides socioeconomic indicators useful in monitoring living conditions and details in-depth information about the labour force in Zimbabwe. The survey focuses on social and economic characteristics status in employment, industry, occupation, place of work and social security. The survey periodicity is five years. The primary objectives are to provide information on the number of people classified according to their activity status, the size, and characteristics of the economically active population, that is, the employed and the unemployed, the informal sector employment and informal employment, retrenchments, the number of working children, the detrimental effects of work on children, and the living conditions in general.
 
 ## What does the ZWE LFS survey cover?
 
-The ZWE LFS is nationally representative. The sampling frame used for the LFS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. Except for Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small-Scale Commercial Farming Areas (SSCFA) and Resettlement Areas.  Harare and Bulawayo formed one urban stratum which gave a total of 34 strata.
+The ZWE LFS is nationally representative survey with the following sample size:
 
 | Year	| # of Households	| # of Individuals|
 | :-------	| :--------		| :--------	|
@@ -20,14 +20,16 @@ The ZWE LFS is nationally representative. The sampling frame used for the LFS wa
 | 2014	| 9759	| 40,527 |
 | 2019	| N/A*	| 39,126 |
 
-*The data used by GLD does not allows us currently to establish a household ID and thus the number of HHs is not given.
+\*The data used by GLD does not allows us currently to establish a household ID and thus the number of HHs is not given.
 
 ## Where can the data be found?
 
-The microdata from 2014 and 2019 LFS is available through the ZWE statistics [bureau catalogue](https://nada.zimstat.co.zw/index.php/catalog) along with the documentation. The data for 2011 was shared internally with the GLD and can only be distributed within the World Bank. 
+The microdata from 2014 and 2019 LFS is available through the ZWE statistics [bureau catalogue](https://nada.zimstat.co.zw/index.php/catalog) along with the documentation. The data for 2011 was shared internally with the GLD and can only be distributed within the World Bank.
 
 ## What is the sampling procedure?
-The survey used a two-stage sample design with EAs as the first and households as the second-stage sampling units. In total 400 EAs were selected with probability proportional to size (PPS), the measure of size being the number of households enumerated in the 2002 Population Census. The selection of the EAs was a systematic one-stage operation, carried out independently for each of the 34 strata.
+The sampling frame used for the LFS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. Except for Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small-Scale Commercial Farming Areas (SSCFA) and Resettlement Areas.  Harare and Bulawayo formed one urban stratum which gave a total of 34 strata.
+
+The survey used a two-stage sample design with EAs as the first and households as the second-stage sampling units. EAs were selected with probability proportional to size (PPS), the measure of size being the number of households enumerated in the 2002 Population Census. The households are selected at random in the second stage from the visited EAs.
 
 ## What is the geographic significance level?
 The survey is significant at the province level for the years 2011 to 2019. Information in the report is at times disaggregated by province and sex, but never by province and urban/rural area.
@@ -48,7 +50,7 @@ Please see this [page](Education.md) for a complete explanation on the education
 
 ### Missing Industry and Occupation variables in 2019
 
-In the year 2019, the public data available to the GMD team has only ISIC and ISCO information for a subsection fo those employed. The screenshot below shows the comparison between the 2019 LFS and Q3 of 2021 which are both based on the same questionnaire. On the right-hand side we see the expected (nearly) diagonal matrix. Those who are employed have ISIC information, those who are not don't. The same applies to ISCO (not shown). 
+In the year 2019, the public data available to the GMD team has only ISIC and ISCO information for a subsection of those employed. The screenshot below shows the comparison between the 2019 LFS and Q3 of 2021 which are both based on the same questionnaire. On the right-hand side we see the expected (nearly) diagonal matrix. Those who are employed have ISIC information, those who are not don't. The same applies to ISCO (not shown). 
 
 In the case of 2019 (left-hand side) the information is not as expected. There are (oddly enough) exactly as employed people without ISIC information as there are people without employment who have an ISIC code recorded. The original information as recorded in the survey is accessible to users via the `industry_orig` and `occup_orig` variables. However, since the information may be skewed if we use the seemingly incorrectly coded variables, no further variables for industry or occupation are harmonised for 2019.
 
