Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -14,26 +14,26 @@
 
 | **District Name**	| **In the Report?**	| **# EA in the Report**	| **In the Data?**	| **# EA in the Data**	|**Note**|
 | :---------------:	| :---------------:		| :------------------:	 	| :--------------:	| :------------------:	|:----:| 
-| Kailahun District | YES | 14 |    |   81,473   | 54,453,238|
-|  Kenema City      | YES | 14 |  63,228,599  |   54,484   | 63,228,600|
-| Kenema District   | YES | 14 | 240,660      |  80,444,148  |   58,396   | 80,444,148|
-| Koidu/New Sembehun City | YES | 14 |  98,035,894 |    49,916   | 98,038,146|
-| Kono District     | YES | 14 |  98,035,894 |    49,916   | 98,038,146|
-| Makeni City       | YES | 10 |  98,035,894 |    49,916   | 98,038,146|
-| Bombali District  | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
-| Kambia District   | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
-| Koinadugu District| YES | 12 |  98,035,894 |    49,916   | 98,038,146|
-| Port Loko District| YES | 12 |  98,035,894 |    49,916   | 98,038,146|
-| Tonkolili District| YES | 12 |  98,035,894 |    49,916   | 98,038,146|
-| Bo City           | YES | 14 |  98,035,894 |    49,916   | 98,038,146|
-| Bo District       | YES | 14 |  98,035,894 |    49,916   | 98,038,146|
-|Bonthe Municipality| YES | 6  |  98,035,894 |    49,916   | 98,038,146|
-| Bonthe District   | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
-| Moyamba District  | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
-| Pujehun District  | YES | 12 |  98,035,894 |    49,916   | 98,038,146|
-| Freetown City     | YES | 50 |  98,035,894 |    49,916   | 98,038,146|
-|Western Rural District| YES | 20 |  98,035,894 |    49,916   | 98,038,146|
-| Western Area      | YES | 70|  98,035,894 |    49,916   | 98,038,146|
+| Kailahun District | YES | 14 | YES | 14 |NA|
+| Kenema City       | YES | 14 | YES | 28 | Kenema city and district are combined as one in the data.|
+| Kenema District   | YES | 14 | YES | -  | See Kenama City. | 
+| Koidu/New Sembehun City | YES | 14 | NO | NA | NA |
+| Kono District     | YES | 14 | YES | 28 | (Suspecting this is a combo of Kono and Koidu.)|
+| Makeni City       | YES | 10 | NO  | NA | NA |
+| Bombali District  | YES | 12 | YES | 22 | NA |
+| Kambia District   | YES | 12 | YES | 13 | NA |
+| Koinadugu District| YES | 12 | YES | 12 | NA |
+| Port Loko District| YES | 12 | YES | 12 | NA |
+| Tonkolili District| YES | 12 | YES | 12 | NA |
+| Bo City           | YES | 14 | YES | 29 | Bo city and district are combined as one in the data.|
+| Bo District       | YES | 14 | YES | -  | See Bo City. |
+|Bonthe Municipality| YES | 6  | YES | 18 | Bonthe Mnucipality and district are combined as one in the data.|
+| Bonthe District   | YES | 12 | YES | -  | See Bonthe Mnucipality. |
+| Moyamba District  | YES | 12 | YES | 12 | NA |
+| Pujehun District  | YES | 12 | YES | 12 | NA |
+| Freetown City     | YES | 50 | NO  |    49,916   | 98,038,146|
+|Western Rural District| YES | 20 | YES | 21 | NA |
+| Western Area      | YES | 70 | YES | ? | In the data we have a category called "Western Urban" with 51 EAs. Not sure which that represents. May be combining Western rual and urban will give Western Area.|
 
 ## Where can the data be found?
 
