Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -31,9 +31,8 @@
 | Bonthe District   | YES | 12 | YES | -  | See Bonthe Mnucipality. |
 | Moyamba District  | YES | 12 | YES | 12 | NA |
 | Pujehun District  | YES | 12 | YES | 12 | NA |
-| Freetown City     | YES | 50 | NO  |    49,916   | 98,038,146|
+| Freetown City     | YES | 50 | YES | 51 | It is called Western Urban in the data.|
 |Western Rural District| YES | 20 | YES | 21 | NA |
-| Western Area      | YES | 70 | YES | ? | In the data we have a category called "Western Urban" with 51 EAs. Not sure which that represents. May be combining Western rual and urban will give Western Area.|
 
 ## Where can the data be found?
 
