Update 1. Introduction to MNG LFS.md

--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -10,11 +10,11 @@
 
 ## What is the MNG LFS?
 
-The Mongolia Labor Force Survey (LFS), initiated by the National Statistics Office of Mongolia in 2002, has been carried out regularly with a shift to a rotation panel design in 2019. Under this design, 75% of the sample from the an earlier round is re-interviewed with the remaining 25% re-sampled. The rotation only lasts for a year, and unlike other LFS where rotation extends to the next LFS year, the Mongolia LFS starts with a new rotation in a new LFS year.
+The Mongolia Labor Force Survey (LFS) has been conducted by the Mongolia National Statistics Office since 2002. The period covered varied across different rounds of the LFS. From 2002 to 2008, the data was collected between July and June of the subsequent year. Since 2010, the data is gathered within the same calendar year.
 
 ## What does the MNG LFS cover?
 
-The Mongolia LFS is a labor force survey with information on demographic characteristics, education, and labor market activities. The surveyed years and sample sizes used are as follows:
+The Mongolia LFS collects information on demographic characteristics, education, and labor market activities. The household and individual sample sizes are presented on the table below:
 
 | Year | Individual count | HH count |
 |---|---|---|
@@ -35,28 +35,44 @@ The Mongolia LFS is a labor force survey with information on demographic charact
 | 2020 |          46,934  |                      6,219  |
 | 2021 |          46,873  |                      6,157  |
 
+It's worth noting that the expanded population using the survey weights does not align perfectly with population projections in the WDI or the UN World Population Prospects. In the 2015 survey round, the raw dataset only included samples aged 15 and above. While there's no indication that the survey sampling is deliberately limited to this age group, it seems that individuals younger than 15 were excluded from the data. Consequently, only an estimate of the working age population can be deduced for this year.
+
+<img src="Utilities/population_comparison.png" width="600" height="450">
+
+
+
+
 ## Where can the data be found?
 
 The datasets are not accessible to the public and researchers have to request the data from the Mongolia National Statistics Office. The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org
 
 ## What is the sampling procedure?
 
-The MNG LFS employs a two-stage stratified sampling design to gather representative data on the country's labor force. This sampling methodology involves selecting Primary Sampling Units (PSUs) in the first stage and households within each PSU in the second stage. Both stages employ random selection techniques, ensuring the sample's representativeness.
+The MNG LFS employs a two-stage stratified sampling design to collect representative data on the country's labor force. This sampling methodology involves selecting Primary Sampling Units (PSUs) in the first stage and households within each PSU in the second stage. 
+
+Starting in 2019, the survey adopted a rotation sampling design where 75% of the sample in a given round is re-interviewed in the next round, while 25% exit the sample. The rotation restarts every year, meaning the survey no longer re-interviews the 75% of the sample from the last quarter of the previous year. The precise details on constructing the panels are covered in a separate document [here](Panels.md).
 
 ## What is the significance level?
 
-The official reports detail estimates by area of residence (urban or rural), and the regions in Mongolia.
+The official reports detail estimates by area of residence (urban or rural), and the regions (subnatid1) in Mongolia. The 2021 official report also detailed estimates by aimags or districts (subnatid2), and given similarities in the sampling design, it is possible that the data for the 2019 and 2020 LFS are representative at this level as well.
 
 ## Other noteworthy aspects
 
 ### Household ID
-The datasets received do not contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the primary sampling unit and the household identification number. 
+The datasets provided in the GLD project initially lack ID information. To enhance the user experience, we've created identifiers using geographical references. The household ID is typically derived from data concerning the primary sampling unit and the household identification number. However, during the 2011 and 2012 rounds, some exceptions required us to construct the household ID using the interview date and time, as the combination of PSU and SSU data didn't precisely identify households. For the 2013 round, we made an effort to incorporate additional household data, such as the number of household visits and individuals absent from households. However, this approach did not fully result in the desired uniqueness of the IDs, and the survey is left with a few duplicate IDs with each having unique individual characteristics.
 
 ### Geographic Information
 As of the time of writing (July 2023) Mongolia is composed of 21 administrative divisions, known as aimags, and the capital city, Ulaanbaatar.
 
 ### Employment: Industry Classification
-The Mongolia LFS uses the International Standards for Industrial Classification (ISIC) to identify industries at the 3- or 4- digit level. ISIC version 3.1 is used for the surveys between 2002 and 2011, and from then on, began using ISIC version 4. 
+The Mongolia LFS questionnaires indicate the use of International Standards for Industrial Classification (ISIC) for industry codes, but they don't specify the exact ISIC version. We determine the ISIC version by looking at how often they match. From 2002 to 2006, the industry codes match most frequently with ISIC version 3.1, while the rounds from 2007 and onwards more often match with ISIC version 4. Beginning the 2011 round, the industry codes are left missing for individuals employed in animal husbandry. In such instances, we assign the relevant code corresponding to this specific economic activity. 
 
 ### Employment: Occupation Classification
+The Mongolia LFS questionnaires suggest that they use the International Standards for Classification of Occupations (ISCO) for occupational codes, but the exact ISCO version is not specified. We identify the ISCO version based on frequency of matches. From 2002 to 2010, the occupation codes most often align with ISCO 1988. However, from 2011 onwards, the codes correlate more closely with ISCO 2008. Some mismatches occur, found in an earlier ISCO version, and some codes do not fit any ISCO versions. This issue is present in all rounds that seem to use ISCO 2008 but is especially noticeable in the 2011 round. We believe this may be due to a transition period between the two ISCO versions. To address this, we have opted to use only the first two digits of the codes for this round.
+
+
+
+
+
+
 
