Update 1. Introduction to MNG LFS.md

--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -58,11 +58,21 @@ The official reports detail estimates by area of residence (urban or rural), and
 
 ## Other noteworthy aspects
 
+### Definition of concept of employment
+
+Since the passing of the [resolution concerning statistics of work, employment and labour underutilization](https://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm) in 2013 at the 19th International Conference of Labour Statisticians (ICLS) surveys are at risk of a series break due to the change in the concept of employment.
+
+In short, the ICLS 19 resolution restricts employment to *work performed for others in exchange for pay or profit*, meaning that own consumption work (e.g., subsistence agriculture or building housing for oneself) are not counted as employment.
+
+The GLD codes the harmonization’s `lstatus` variable based on the concept used in the survey. In the case of the Monoglia LFS this change occurs in 2019, when the survey switches to new definition. This implies that estimates for 2019 onwards may not be directly comparable with those from the previous years. However, it is possible to recode `lstatus` such that it matches the previous definition. The precise details are covered in a [separate document here](Converting%20between%20ICLS%20Definitions.md)
+
 ### Household ID
 The datasets provided in the GLD project initially lack ID information. To enhance the user experience, we've created identifiers using geographical references. The household ID is typically derived from data concerning the primary sampling unit and the household identification number. However, during the 2011 and 2012 rounds, some exceptions required us to construct the household ID using the interview date and time, as the combination of PSU and SSU data didn't precisely identify households. For the 2013 round, we made an effort to incorporate additional household data, such as the number of household visits and individuals absent from households. However, this approach did not fully result in the desired uniqueness of the IDs, and the survey is left with a few duplicate IDs with each having unique individual characteristics.
 
 ### Geographic Information
-As of the time of writing (July 2023) Mongolia is composed of 21 administrative divisions, known as aimags, and the capital city, Ulaanbaatar.
+As of the time of writing (July 2023) Mongolia is composed of 21 administrative divisions, known as aimags, and the capital city, Ulaanbaatar. These were grouped into 5 regions:
+
+
 
 ### Employment: Industry Classification
 The Mongolia LFS questionnaires indicate the use of International Standards for Industrial Classification (ISIC) for industry codes, but they don't specify the exact ISIC version. We determine the ISIC version by looking at how often they match. From 2002 to 2006, the industry codes match most frequently with ISIC version 3.1, while the rounds from 2007 and onwards more often match with ISIC version 4. Beginning the 2011 round, the industry codes are left missing for individuals employed in animal husbandry. In such instances, we assign the relevant code corresponding to this specific economic activity. 
