--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -72,6 +72,13 @@ The datasets provided in the GLD project initially lack ID information. To enhan
 ### Geographic Information
 As of the time of writing (July 2023) Mongolia is composed of 21 administrative divisions, known as aimags, and the capital city, Ulaanbaatar. These were grouped into 5 regions:
 
+| Subnatid1 (Regions)  | Subnatid2 (Divisions/"Aimags")   |
+|-------------|-------------|
+| Ulaanbaatar | Ulaanbaatar |
+| Central     | Umnugovi, Selenge, Tuv, Darhan-Uul, Govi-sumber, Dornogovi, Dundgovi |
+| East        | Suhbaatar, Hentii, Dornod |
+| West        | Uvs, Hovd, Bayan-Ulgii, Govi-Altai, Zavhan |
+| Highlands   | Arhangai, Uvurhangai, Huvsgul, Orhon, Bayanhongor, Bulgan |
 
 
 ### Employment: Industry Classification
